<resources>
    <string name="app_name">Mordern Notes App</string>
    <string name="AppTitle">Notes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Type something...</string>
    <string name="update">Update</string>
    <string name="noNote">No Notes added here yet</string>
    <string name="noTodo">No Tasks added here yet</string>
    <string name="note">Note</string>
    <string name="ToDo">Todo</string>
    <string name="hintTask">Create a task</string>
    <string name="doneButton">Done</string>
    <string name="completed">Completed</string>
    <string name="deleteTodo">Delete Task</string>
    <string name="deleteTodoDesc">Do you want to delete the task?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="imageDesc">Image</string>
    <string name="dateDemo">21 March, 2021</string>
    <string name="addImage">Add Image</string>
    <string name="addauido">Record Audio</string>
    <string name="deleteNote">Delete Note</string>
    <string name="deleteAudio">Delete Audio</string>
    <string name="deleteNoteDesc">Are you sure you want to delete this note?</string>
    <string name="deleteAudioDesc">Are you sure you want to delete this audio?</string>
    <string name="reminderButton">Reminder</string>
    <string name="selectTime">Please select the time</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="deleteButton">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- Onboarding Screen -->
    <string name="onBoarding1Title">Manage your tasks</string>
    <string name="onBoarding2Title">See statistics of your tasks</string>
    <string name="onBoarding3Title">Improve productivity</string>
    <string name="onBoarding1Description">Save all your day to day tasks in one place and complete them all</string>
    <string name="onBoarding2Description">See detail statistics of all the task you have done within the last week</string>
    <string name="onBoarding3Description">Improve your daily productivity by completing all your tasks in time</string>
</resources>