<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/note_bottom_background"
    android:paddingBottom="20dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <ImageView
        android:id="@+id/bottomSheetButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/imageDesc"
        android:rotation="90"
        android:src="@drawable/ic_baseline_arrow_back_ios_24" />


    <LinearLayout
        android:id="@+id/addimagelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bottomSheetButton"
        android:orientation="horizontal"
        android:paddingStart="20dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/imageDesc"
            android:src="@drawable/ic_baseline_image_24"
            app:tint="@color/textHintColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/addImage"
            android:textColor="@color/textHintColor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/addRecordingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addimagelayout"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingStart="20dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/imageDesc"
            android:src="@drawable/ic_baseline_mic_24"
            app:tint="@color/textHintColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/addauido"
            android:textColor="@color/textHintColor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/deleteNoteLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addRecordingLayout"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/imageDesc"
            android:src="@drawable/ic_baseline_delete_outline_24"
            app:tint="@android:color/holo_red_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/deleteNote"
            android:textColor="@android:color/holo_red_light" />

    </LinearLayout>

</RelativeLayout>