<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:text="@string/ToDo"
            android:gravity="bottom"
            android:layout_centerVertical="true"
            android:textColor="@color/titleColor"
            android:textSize="28sp" />


    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_below="@id/topBar"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addTodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/flButtonColor"
        android:src="@drawable/ic_baseline_add_24"
        android:clickable="true"
        android:focusable="true"
        app:tint="@color/titleColor"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/imageDesc"
        tools:ignore="RelativeOverlap" />

    <LinearLayout
        android:id="@+id/noNoteView"
        android:visibility="gone"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_library_add_check_24"
            app:tint="#838383"
            android:contentDescription="@string/imageDesc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/textHintColor"
            android:text="@string/noTodo"/>

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">

        <RelativeLayout
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            android:id="@+id/LayoutBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/todo_bottom_background"
            android:paddingBottom="20dp">


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/closeLayout"
                android:layout_width="40dp"
                android:layout_height="4dp"
                app:cardBackgroundColor="@android:color/white"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/todoTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="30dp"
                android:background="@null"
                android:layout_below="@id/closeLayout"
                android:hint="@string/hintTask"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/titleColor"
                android:textColorHint="@color/textHintColor"
                android:textSize="18sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/doneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/todoTask"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/doneButton"
                android:textColor="@color/doneButtonColor"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/reminderButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/todoTask"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/reminderButton"
                android:textColor="@color/doneButtonColor"
                android:textSize="16sp" />


        </RelativeLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>