<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:id="@+id/LayoutBottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:background="@drawable/todo_bottom_background"
    android:paddingBottom="20dp">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/closeLayout"
        android:layout_width="40dp"
        android:layout_height="4dp"
        app:cardBackgroundColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/todoTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@null"
        android:layout_below="@id/closeLayout"
        android:hint="@string/hintTask"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/titleColor"
        android:textColorHint="@color/textHintColor"
        android:textSize="20sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/todoTask"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/doneButton"
        android:textColor="@color/doneButtonColor"
        android:textSize="18sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/setReminderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/todoTask"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/reminderButton"
        android:textColor="@color/doneButtonColor"
        android:textSize="18sp" />


</RelativeLayout>