<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="40dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="40dp"
    android:background="@drawable/record_audio_background">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/mic_background"
        android:backgroundTint="@color/white">

        <ImageView
            android:id="@+id/recordButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/imageDesc"
            android:layout_marginBottom="2.5dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_baseline_mic_24"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/stopButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:contentDescription="@string/imageDesc"
            android:src="@drawable/ic_baseline_stop_24"
            android:visibility="gone"
            app:tint="@color/white" />

    </FrameLayout>

    <TextView
        android:id="@+id/timer"
        android:layout_below="@id/frameLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/ubuntu_medium"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timer"
        android:layout_marginStart="28dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="18dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timer"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="18dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="15sp" />


    <!--<Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        android:text="Play" />

    <Button
        android:id="@+id/recordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:text="Record" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:textColor="@color/white"
        android:layout_marginEnd="20dp"
        android:text="Stop" />-->

</RelativeLayout>